started about me section

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design Bootstrap</title>
+    <title>Muhammad Jaffar</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
+    <!--  custom styles -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark primary-color scrolling-navbar">
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Muhammad</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
         aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,10 +35,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -46,12 +52,37 @@
     <div style="height: 100vh">
       <div id="particles-js"></div>
         <div class="flex-center flex-column">
-            <h1 class="animated fadeIn mb-4">Muhammad Jaffar</h1>
-            <h5 class="animated fadeIn mb-3">Software Developer + Gamer + Hacker.</h5>
+            <h1 class="animated fadeIn mb-4">Hi! I'm Muhammad</h1>
+            <h5 class="animated fadeIn mb-3">Software Developer + Gamer + Hacker</h5>
             <a class="btn btn-purple btn-rounded"><i class="fa fa-user left"></i> Download Resume!</a>
+            <div class="row">
+              <div class="col-md-4">
+                <a type="button" class="btn-floating btn-li"> <i class="fa fa-linkedin"></i></a>
+              </div>
+              <div class="col-md-4">
+                <a type="button" class="btn-floating btn-git"> <i class="fa fa-github"></i></a>
+              </div>
+              <div class="col-md-4">
+                <a type="button" class="btn-floating btn-email"><i class="fa fa-envelope"></i></a>
+              </div>
+            </div>
+            <a id="" href="#aboutMe"> <i class="fa fa-2x fa-chevron-down animated swing infinite" aria-hidden="true"></i></a>
         </div>
     </div>
   </header>
+
+  <main>
+    <div class="container">
+      <!-- About Me -->
+      <section id="aboutMe">
+        <h1>About Me</h1>
+      </section>
+      <!-- projects -->
+      <section id="projects">
+
+      </section>
+    </div>
+  </main>
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
