--- a/index.html
+++ b/index.html
@@ -14,81 +14,100 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!--  custom styles -->
     <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
   <header>
     <!--Navbar-->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark primary-color scrolling-navbar">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">Muhammad</a>
+      <a class="navbar-brand name1" style="color: #2b2b2b;" href="#">Muhammad</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
         aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="basicExampleNav">
         <!-- Links -->
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" id="navbarRight">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" style="color: #2b2b2b;" href="#">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" style="color: #2b2b2b;" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" style="color: #2b2b2b;" href="#">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" style="color: #2b2b2b;" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link  btn1" href="#">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-    <div style="height: 100vh">
-      <div id="particles-js"></div>
-        <div class="flex-center flex-column">
-            <h1 class="animated fadeIn mb-4">Hi! I'm Muhammad</h1>
-            <h5 class="animated fadeIn mb-3">Software Developer + Gamer + Hacker</h5>
-            <a class="btn btn-purple btn-rounded"><i class="fa fa-user left"></i> Download Resume!</a>
-            <div class="row">
-              <div class="col-md-4">
-                <a type="button" class="btn-floating btn-li"> <i class="fa fa-linkedin"></i></a>
-              </div>
-              <div class="col-md-4">
-                <a type="button" class="btn-floating btn-git"> <i class="fa fa-github"></i></a>
-              </div>
-              <div class="col-md-4">
-                <a type="button" class="btn-floating btn-email"><i class="fa fa-envelope"></i></a>
-              </div>
-            </div>
-            <a id="" href="#aboutMe"> <i class="fa fa-2x fa-chevron-down animated swing infinite" aria-hidden="true"></i></a>
-        </div>
-    </div>
   </header>
 
   <main>
     <div class="container">
+      <section id="home">
+          <!-- <div id="particles-js"></div> -->
+              <div class="row">
+                <div class="col-md-6" style="max-width: 48%; box-sizing: border-box; display: block;">
+                  <div class="type-js headline">
+                    <h1 class="text-js">Hi I'm Muhammad!</h1>
+                  </div>
+                  <h5 class="animated fadeIn mb-3">I'm a <b>Software Developer </b>based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.</h5>
+                  <a class="btn btn-rounded resbtn" style="color: white;"><i class="fa fa-user left"></i> Download Resume!</a>
+                </div>
+
+                <div class="col-md-6" style="max-width: 50%; display: block;">
+                  <!-- <p>test</p> -->
+                  <div class="box">
+
+                  </div>
+                </div>
+
+              </div>
+
+                <!-- <div class="row">
+                  <div class="col-md-4">
+                    <a type="button" class="btn-floating btn-li"> <i class="fa fa-linkedin"></i></a>
+                  </div>
+                  <div class="col-md-4">
+                    <a type="button" class="btn-floating btn-git"> <i class="fa fa-github"></i></a>
+                  </div>
+                  <div class="col-md-4">
+                    <a type="button" class="btn-floating btn-email"><i class="fa fa-envelope"></i></a>
+                  </div>
+                </div> -->
+                <!-- <a id="" href="#aboutMe"> <i class="fa fa-2x fa-chevron-down animated swing infinite" aria-hidden="true"></i></a> -->
+      </section>
       <!-- About Me -->
       <section id="aboutMe">
-        <h1>About Me</h1>
+        <!-- <h1>About Me</h1> -->
       </section>
       <!-- projects -->
       <section id="projects">
-
       </section>
     </div>
   </main>
+  <!--  -->
+  <footer>
+
+  </footer>
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script src="js/particles.js"></script>
     <script src="js/particleApp.js"></script>
+
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
