Added text editor

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section id="home">
           <!-- <div id="particles-js"></div> -->
               <div class="row">
-                <div class="col-md-6" style="max-width: 48%; box-sizing: border-box; display: block;">
+                <div class="col-md-6" style="max-width: 45%; box-sizing: border-box; display: block;">
                   <div class="type-js headline">
                     <h1 class="text-js">Hi I'm Muhammad!</h1>
                   </div>
@@ -68,6 +68,27 @@
                 <div class="col-md-6" style="max-width: 50%; display: block;">
                   <!-- <p>test</p> -->
                   <div class="box">
+                    <div class="editorBtn">
+                      <span class="red1"></span>
+                      <span class="yellow1"></span>
+                      <span class="green1"></span>
+                    </div>
+
+                    <!-- <div class="container">
+
+                    </div> -->
+                    <div style="margin-left: 30px; margin-bottom: -30px;">
+                      <p class="comment1"> < </p>
+                      <p  class="comment1" style="padding-right: 40px;">!-- Take a Look at the tiny bit of code for this section! --> </p>
+                    </div>
+
+                    <div class="mainContent">
+                      <p class="mainDiv"><span > < div class=" text-js headline" > </span></p>
+                      <p  class="content" > < h1 class="text-js"> Hi I'm Muhammad! < /h> </p>
+                      <p class="content"> < h5> I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.< /h> </p>
+                      <p class="content"> < button> Download Resume! < /button> </p>
+                      <p class="content"> < /div</p>
+                    </div>
 
                   </div>
                 </div>
