finished text editor
finished adding the colors, and fixed some spacing issue

--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
                     <!-- <div class="container">
 
                     </div> -->
-                    <div style="margin-left: 30px; margin-bottom: -30px;">
+                    <div style="margin-left: 30px; margin-bottom: -40px;">
                       <p class="comment1"> < </p>
                       <p  class="comment1" style="padding-right: 40px;">!-- Take a Look at the tiny bit of code for this section! --> </p>
                     </div>
 
                     <div class="mainContent">
-                      <p class="mainDiv"><span > < div class=" text-js headline" > </span></p>
-                      <p  class="content" > < h1 class="text-js"> Hi I'm Muhammad! < /h> </p>
-                      <p class="content"> < h5> I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.< /h> </p>
-                      <p class="content"> < button> Download Resume! < /button> </p>
-                      <p class="content"> < /div</p>
+                      <p class="mainDiv"> < div <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js headline"</span>></p>
+                      <p class="content" > <span class="editColor">< h1</span> <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js"</span>> Hi I'm Muhammad! <span class="editColor"> < /h> </span></p>
+                      <p class="content"> <span  class="editColor" >< h5></span>I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.<span class="editColor">< /h> </span></p>
+                      <p class="content"> <span class="editColor">< button></span> Download Resume! <span class="editColor">< /button></span></p>
+                      <p class="mainDiv"> < /div</p>
                     </div>
 
                   </div>
