Added two new sections
Added services and contact sections

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
                       <span class="yellow1"></span>
                       <span class="green1"></span>
                     </div>
-
                     <!-- <div class="container">
 
                     </div> -->
@@ -81,7 +80,6 @@
                       <p class="comment1"> < </p>
                       <p  class="comment1" style="padding-right: 40px;">!-- Take a Look at the tiny bit of code for this section! --> </p>
                     </div>
-
                     <div class="mainContent">
                       <p class="mainDiv"> < div <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js headline"</span>></p>
                       <p class="content" > <span class="editColor">< h1</span> <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js"</span>> Hi I'm Muhammad! <span class="editColor"> < /h> </span></p>
@@ -89,31 +87,55 @@
                       <p class="content"> <span class="editColor">< button></span> Download Resume! <span class="editColor">< /button></span></p>
                       <p class="mainDiv"> < /div</p>
                     </div>
-
                   </div>
                 </div>
-
               </div>
-
-                <!-- <div class="row">
-                  <div class="col-md-4">
-                    <a type="button" class="btn-floating btn-li"> <i class="fa fa-linkedin"></i></a>
-                  </div>
-                  <div class="col-md-4">
-                    <a type="button" class="btn-floating btn-git"> <i class="fa fa-github"></i></a>
-                  </div>
-                  <div class="col-md-4">
-                    <a type="button" class="btn-floating btn-email"><i class="fa fa-envelope"></i></a>
-                  </div>
-                </div> -->
-                <!-- <a id="" href="#aboutMe"> <i class="fa fa-2x fa-chevron-down animated swing infinite" aria-hidden="true"></i></a> -->
       </section>
-      <!-- About Me -->
-      <section id="aboutMe">
-        <!-- <h1>About Me</h1> -->
+
+      <!-- Api services -->
+      <section id="API">
+        <h3>Services I'v Worked with</h3>
+        <div class="container tech">
+          <div class="row">
+            <div class="col-md-3">
+              <a href="#" title="express">
+              <img class="tech-image"src="img/express.png" alt="express">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#" title="shopify">
+                <img class="tech-imageShop"src="img/shopify.png" alt="">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#" title="babel">
+                <img class="tech-imageBab"src="img/babel.png" alt="">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="#">
+                <img class="tech-imageBab"src="img/stripe.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+
       </section>
       <!-- projects -->
       <section id="projects">
+        <!-- <h3>Portofilio</h3> -->
+      </section>
+
+      <section id="contact">
+        <div class="container">
+          <h3 class="titleCont">Got an Amazing Idea?</h3>
+          <p>If you've got an idea and you're interested in working together, I would love to hear it!</p>
+          <a class="nav-link  btn1" href="#">Contact</a>
+        </div>
       </section>
     </div>
   </main>
