--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <!--Navbar-->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar white-color">
       <!-- Navbar brand -->
       <a class="navbar-brand name1" style="color: #2b2b2b;" href="#">Muhammad</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -121,13 +121,10 @@
             </div>
           </div>
         </div>
-
-
-
       </section>
       <!-- projects -->
       <section id="projects">
-        <!-- <h3>Portofilio</h3> -->
+        <h3>Portofilio</h3>
       </section>
 
       <section id="contact">
