--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
@@ -124,7 +125,37 @@
       </section>
       <!-- projects -->
       <section id="projects">
-        <h3>Portofilio</h3>
+        <div class="conatiner">
+          <h3>Portfolio</h3>
+          <p>Take a look at my personal portfolio</p>
+          <div class="row">
+            <!-- Mark Calculator -->
+            <div class="col-md-4" style="">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff"> See Project</a>
+                  </p>
+                </div>
+                <a href="#">
+                <img src="img/firstsite.png" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                </a>
+              </div>
+            </div>
+            <!-- First website -->
+            <div class="col-md-4" style="padding-left:70px;">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p id=""class="">
+                    <a class="btn btn-rounded portbtn" style="color: #fff">See Project</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </section>
 
       <section id="contact">
@@ -145,8 +176,9 @@
     <!-- JQuery -->
     <script src="js/particles.js"></script>
     <script src="js/particleApp.js"></script>
-
+    <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script> -->
     <script type="text/javascript" src="js/script.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
