--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
               <div class="projectbox">
                 <div class="thumbnail-overlay">
                   <p>
-                  <a class="btn btn-rounded portbtn external" style="color: #fff"> See Project</a>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
                   </p>
                 </div>
                 <a href="#">
@@ -142,20 +143,25 @@
                 </a>
               </div>
             </div>
-            <!-- First website -->
+
+            <!-- Mark Calculator -->
             <div class="col-md-3" style="padding-left:70px;">
               <div class="projectbox">
                 <div class="thumbnail-overlay">
-                  <p id=""class="">
-                    <a class="btn btn-rounded portbtn" style="color: #fff">See Project</a>
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
                   </p>
                 </div>
+                <a href="#">
+                <img src="img/insta.png" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                </a>
               </div>
             </div>
-
           </div>
         </div>
 
+        
       </section>
 
       <section id="contact">
