finished up remaining empty field
- added resume
- added the links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" style="color: #2b2b2b;" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #2b2b2b;" href="#">Portfolio</a>
+            <a class="nav-link" style="color: #2b2b2b;" href="#projects">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: #2b2b2b;" href="#">Blog</a>
@@ -60,10 +60,12 @@
               <div class="row">
                 <div class="col-md-6" style="max-width: 45%; box-sizing: border-box; display: block;">
                   <div class="type-js headline">
-                    <h1 class="text-js">Hi I'm Muhammad!</h1>
+                    <h1 class="text-js">Hi, I'm Muhammad!</h1>
                   </div>
                   <h5 class="animated fadeIn mb-3">I'm a <b>Software Developer </b>based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.</h5>
-                  <a class="btn btn-rounded resbtn" style="color: white;"><i class="fa fa-user left"></i> Download Resume!</a>
+                  <a class="btn btn-rounded resbtn btn-lg" style="color: white;" target="_blank" href="mjaffarResume.pdf"><i class="fa fa-user left"></i> Check out Resume!</a>
+                  <a class="btn-floating btn-lg" style="background-color: black;"href="https://github.com/MuhammadCoder"><i class="fa fa-github" aria-hidden="true"></i></a>
+                  <a class="btn-floating btn-lg blue-gradient" href="https://www.linkedin.com/in/muhammad-jaffar-767509122/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
 
                 <div class="col-md-6" style="max-width: 50%; display: block;">
@@ -99,24 +101,24 @@
         <div class="container tech">
           <div class="row">
             <div class="col-md-3">
-              <a href="#" title="express">
+              <a href="https://expressjs.com/" title="express" target="_blank">
               <img class="tech-image"src="img/express.png" alt="express">
               </a>
             </div>
             <div class="col-md-3">
-              <a href="#" title="shopify">
-                <img class="tech-imageShop"src="img/shopify.png" alt="">
+              <a href="https://www.shopify.ca/" title="shopify" target="_blank">
+                <img class="tech-imageShop"src="img/shopify.png" alt="shopify">
               </a>
             </div>
 
             <div class="col-md-3">
-              <a href="#" title="babel">
-                <img class="tech-imageBab"src="img/babel.png" alt="">
+              <a href="#https://babeljs.io/" title="babel" target="_blank">
+                <img class="tech-imageBab"src="img/babel.png" alt="babel">
               </a>
             </div>
 
             <div class="col-md-3">
-              <a href="#">
+              <a href="https://stripe.com/gb" target="_blank" title="stripe">
                 <img class="tech-imageBab"src="img/stripe.png" alt="">
               </a>
             </div>
@@ -129,53 +131,112 @@
           <h3>Portfolio</h3>
           <p>Take a look at my personal portfolio</p>
           <div class="row">
-            <!-- Mark Calculator -->
-            <div class="col-md-3" style="">
+
+            <!-- First Website -->
+            <div class="col-md-3" style="margin-left:5%;">
               <div class="projectbox">
                 <div class="thumbnail-overlay">
                   <p>
-                  <a class="btn btn-rounded portbtn external" style="color: #fff;" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
-                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
                   </p>
                 </div>
                 <a href="#">
-                <img src="img/firstsite.png" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                <img src="img/firstsite.png" style="width: 320px; height: 260px; border-radius: 7.5px;" alt="">
                 </a>
               </div>
             </div>
 
-            <!-- Mark Calculator -->
-            <div class="col-md-3" style="padding-left:70px;">
+            <!-- Insta Offer -->
+            <div class="col-md-3" style="margin-left:5%;">
               <div class="projectbox">
                 <div class="thumbnail-overlay">
                   <p>
-                  <a class="btn btn-rounded portbtn external" style="color: #fff;" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
-                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Insta-offer/">Lanuch Site</a>
                   </p>
                 </div>
                 <a href="#">
-                <img src="img/insta.png" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                <img src="img/insta.png" style="width: 320px; height: 260px; border-radius: 7.5px;" alt="">
                 </a>
               </div>
             </div>
+
+            <!-- second site -->
+
+            <div class="col-md-3" style="margin-left:5%;">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/personal-web-ver2">See Project</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/personal-web-ver2/">Lanuch Site</a>
+                  </p>
+                </div>
+                <a href="#">
+                <img src="img/site2.svg" style="width: 320px; height: 260px; border-radius: 7.5px;" alt="">
+                </a>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="margin-left:5%; margin-top:2%;">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/Fall-Objects">See Project</a>
+                  <!-- <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/personal-web-ver2/">Lanuch Site</a> -->
+                  </p>
+                </div>
+                <a href="#">
+                <img src="img/fall.svg" style="width: 320px; height: 260px; border-radius: 7.5px;" alt="">
+                </a>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="margin-left:5%; margin-top:2%;">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/Calculator">See Project</a>
+                  <!-- <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/personal-web-ver2/">Lanuch Site</a> -->
+                  </p>
+                </div>
+                <a href="#">
+                <img src="img/cal.svg" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                </a>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="margin-left:5%; margin-top:2%;">
+              <div class="projectbox">
+                <div class="thumbnail-overlay">
+                  <p>
+                  <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/Calculator">See Project</a>
+                  <!-- <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" href="https://muhammadcoder.github.io/personal-web-ver2/">Lanuch Site</a> -->
+                  </p>
+                </div>
+                <a href="#">
+                <img src="img/mark2.svg" style="width: 320px; height: 250px; border-radius: 7.5px;" alt="">
+                </a>
+              </div>
+            </div>
+
           </div>
         </div>
-
-        
       </section>
 
       <section id="contact">
         <div class="container">
           <h3 class="titleCont">Got an Amazing Idea?</h3>
           <p>If you've got an idea and you're interested in working together, I would love to hear it!</p>
-          <a class="nav-link  btn1" href="#">Contact</a>
+          <a class="nav-link  btn1" href="#" style="text-align: center;">Let's Work Together</a>
         </div>
       </section>
     </div>
   </main>
   <!--  -->
   <footer>
-
+    <div class="text-align: center;">
+        <p class="text-center">© Muhammad Jaffar 2018</p>
+    </div>
   </footer>
 
     <!-- SCRIPTS -->
