--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <main>
     <div class="container">
       <section id="home">
-          <!-- <div id="particles-js"></div> -->
+          <div id="particles-js"></div>
               <div class="row">
                 <div class="col-md-6" style="max-width: 45%; box-sizing: border-box; display: block;">
                   <div class="type-js headline">
