--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto" id="navbarRight">
           <li class="nav-item active">
-            <a class="nav-link" style="color: #2b2b2b;" href="#">Home
+            <a class="nav-link" style="color: #2b2b2b;" href="#home">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -76,9 +76,7 @@
                       <span class="yellow1"></span>
                       <span class="green1"></span>
                     </div>
-                    <!-- <div class="container">
 
-                    </div> -->
                     <div style="margin-left: 30px; margin-bottom: -40px;">
                       <p class="comment1"> < </p>
                       <p  class="comment1" style="padding-right: 40px;">!-- Take a Look at the tiny bit of code for this section! --> </p>
