--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h1 class="text-js">Hi, I'm Muhammad!</h1>
                   </div>
                   <h5 class="animated fadeIn mb-3">I'm a <b>Software Developer </b>based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.</h5>
-                  <a class="btn btn-rounded resbtn btn-lg" style="color: white;" target="_blank" href="mjaffarResume.pdf"><i class="fa fa-user left"></i> Check out Resume!</a>
+                  <a class="btn btn-rounded resbtn btn-lg" style="color: white;" target="_blank" href="mjaffarResume.pdf"><i class="fa fa-user left"></i>Check Out My Resume!</a>
                   <a class="btn-floating btn-lg" style="background-color: black;"href="https://github.com/MuhammadCoder"><i class="fa fa-github" aria-hidden="true"></i></a>
                   <a class="btn-floating btn-lg blue-gradient" href="https://www.linkedin.com/in/muhammad-jaffar-767509122/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
@@ -83,9 +83,9 @@
                     </div>
                     <div class="mainContent">
                       <p class="mainDiv"> < div <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js headline"</span>></p>
-                      <p class="content" > <span class="editColor">< h1</span> <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js"</span>> Hi I'm Muhammad! <span class="editColor"> < /h> </span></p>
-                      <p class="content"> <span  class="editColor" >< h5></span>I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.<span class="editColor">< /h> </span></p>
-                      <p class="content"> <span class="editColor">< button></span> Download Resume! <span class="editColor">< /button></span></p>
+                      <p class="content" > <span class="editColor">< h1</span> <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js"</span>> Hi I'm Muhammad! <span class="editColor"> < /h1> </span></p>
+                      <p class="content"> <span  class="editColor" >< h5></span>I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.<span class="editColor">< /h5> </span></p>
+                      <p class="content"> <span class="editColor">< button></span> Check Out My Resume! <span class="editColor">< /button></span></p>
                       <p class="mainDiv"> < /div</p>
                     </div>
                   </div>
@@ -95,7 +95,7 @@
 
       <!-- Api services -->
       <section id="API">
-        <h3>Services I'v Worked with</h3>
+        <h3>Services I've Worked with</h3>
         <div class="container tech">
           <div class="row">
             <div class="col-md-3">
@@ -136,7 +136,7 @@
                 <div class="thumbnail-overlay">
                   <p>
                   <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/Personal-Website.github.io">See Project</a>
-                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Lanuch Site</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Personal-Website.github.io/">Launch Site</a>
                   </p>
                 </div>
                 <a href="#">
@@ -150,7 +150,7 @@
               <div class="projectbox">
                 <div class="thumbnail-overlay">
                   <p>
-                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Insta-offer/">Lanuch Site</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/Insta-offer/">Launch Site</a>
                   </p>
                 </div>
                 <a href="#">
@@ -166,7 +166,7 @@
                 <div class="thumbnail-overlay">
                   <p>
                   <a class="btn btn-rounded portbtn external" style="color: #fff;" target="_blank" href="https://github.com/MuhammadCoder/personal-web-ver2">See Project</a>
-                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/personal-web-ver2/">Lanuch Site</a>
+                  <a class="btn btn-rounded portbtn  external" style="color: #fff; padding-top: 20px;" target="_blank" href="https://muhammadcoder.github.io/personal-web-ver2/">Launch Site</a>
                   </p>
                 </div>
                 <a href="#">
