--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <p class="content" > <span class="editColor">< h1</span> <span style="color: rgb(201,149,100)">class=</span><span style="color: rgb(151,194,121)">"text-js"</span>> Hi I'm Muhammad! <span class="editColor"> < /h1> </span></p>
                       <p class="content"> <span  class="editColor" >< h5></span>I'm a < b>Software Developer < /b> based in Ontario Canada. I specialise in bringing your awesome ideas to life on the web.<span class="editColor">< /h5> </span></p>
                       <p class="content"> <span class="editColor">< button></span> Check Out My Resume! <span class="editColor">< /button></span></p>
-                      <p class="mainDiv"> < /div</p>
+                      <p class="mainDiv"> < /div></p>
                     </div>
                   </div>
                 </div>
