--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
       </section>
 
       <!-- Api services -->
+      <section id="about">
+        <h3 style="text-align: center; margin-top: 100px;">Hey there!</h3>
+        <div class="container" style="margin-left:40px;">
+          <p>My Name is Muhammad Jaffar. I specizliaze in <strong>Web/Mobile Design</strong> and in <strong>user experience design</strong></p>
+          <p>I am a 4th year student at University of Guelph in the Software Engineering program, which has given me a broad set of skills
+            <br>from user experience design to techinal skills and marketing.</br></p>
+          <p>My portfolio encompasses my skills and <strong>passion to help people.</strong></p>
+        </div>
+
+      </section>
       <section id="API">
         <h3>Services I've Worked with</h3>
         <div class="container tech">
