finish ui for about

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #2b2b2b;" href="#">About</a>
+            <a class="nav-link" style="color: #2b2b2b;" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: #2b2b2b;" href="#projects">Portfolio</a>
@@ -92,14 +92,14 @@
                 </div>
               </div>
       </section>
-
       <!-- Api services -->
       <section id="about">
-        <h3 style="text-align: center; margin-top: 100px;">Hey there!</h3>
-        <div class="container" style="margin-left:40px;">
+        <!-- <h3 style="margin-top: 100px;">About</h3> -->
+        <h3 style="text-align: center; margin-top: 120px;">Hey there!</h3>
+        <div class="container" style="margin-left:20%; width:60%; margin-top:40px; font-size:20px;">
           <p>My Name is Muhammad Jaffar. I specizliaze in <strong>Web/Mobile Design</strong> and in <strong>user experience design</strong></p>
-          <p>I am a 4th year student at University of Guelph in the Software Engineering program, which has given me a broad set of skills
-            <br>from user experience design to techinal skills and marketing.</br></p>
+          <p>I am a 4th year student at University of Guelph in the <a id="proglink"href="https://www.uoguelph.ca/registrar/calendars/undergraduate/2015-2016/c10/c10bcomp-seng.shtml">Software Engineering program</a>, which has given me a broad set of skills
+          <br>from user experience design to techinal skills and marketing.</br></p>
           <p>My portfolio encompasses my skills and <strong>passion to help people.</strong></p>
         </div>
 
