--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h3 style="text-align: center; margin-top: 120px;">Hey there!</h3>
         <div class="container" style="margin-left:20%; width:60%; margin-top:40px; font-size:20px;">
           <p>My Name is Muhammad Jaffar. I specizliaze in <strong>Web/Mobile Design</strong> and in <strong>user experience design</strong></p>
-          <p>I am a 4th year student at University of Guelph in the <a id="proglink"href="https://www.uoguelph.ca/registrar/calendars/undergraduate/2015-2016/c10/c10bcomp-seng.shtml">Software Engineering program</a>, which has given me a broad set of skills
+          <p>I am a 4th year student at University of Guelph in the <a id="proglink"href="https://www.uoguelph.ca/registrar/calendars/undergraduate/2015-2016/c10/c10bcomp-seng.shtml" target="_blank">Software Engineering program</a>, which has given me a broad set of skills
           <br>from user experience design to techinal skills and marketing.</br></p>
           <p>My portfolio encompasses my skills and <strong>passion to help people.</strong></p>
         </div>
